tests-integration/tests/snapshots/test__styles__check_after.snap
---
source: tests-integration/tests/test.rs
expression: "&snapshot"
---
{
  "files": [
    {
      "outcome": "clean",
      "path": "example.block"
    },
    {
      "outcome": "clean",
      "path": "example.line"
    }
  ]
}
