tests-integration/tests/snapshots/test__styles__format.snap
---
source: tests-integration/tests/test.rs
expression: "&snapshot"
---
{
  "files": [
    {
      "outcome": "replace",
      "path": "example.block"
    },
    {
      "outcome": "replace",
      "path": "example.line"
    }
  ]
}
