tests-integration/tests/snapshots/test__styles__tree_after.snap
---
source: tests-integration/tests/test.rs
expression: tree_snapshot(root)
---
=== example.block ===
<*␊
  Copyright 2026 Acme␊
  Licensed under Example␊
*>␊
␊
block content␊
=== example.line ===
<!-- Copyright 2026 Acme    -->␊
<!-- Licensed under Example -->␊
␊
line content␊
=== licenserc.toml ===
[header]␊
text = """␊
Copyright 2026 Acme␊
Licensed under Example␊
"""␊
␊
[files]␊
excludes = ["licenserc.toml"]␊
␊
[styles.box_line]␊
kind = "line"␊
pad_lines = true␊
prefix = "<!-- "␊
suffix = " -->"␊
␊
[styles.fenced_block]␊
end = "*>"␊
kind = "block"␊
prefix = "  "␊
start = "<*"␊
␊
[[rules]]␊
extensions = ["line"]␊
style_out = "box_line"␊
␊
[[rules]]␊
extensions = ["block"]␊
style_out = "fenced_block"␊
